--- a/product.html
+++ b/product.html
@@ -226,36 +226,41 @@ window.addEventListener("resize", debounce(adjustLogoAndNav, 100));
 
   <div class="product-section">
     <div class="image left" data-aos="fade-right">
-  <object data="assets/img/rpa.gif" type="image/gif" style="width: 70%; max-width: 300px; height: auto;"></object>
-</div>
+        <object data="assets/img/rpa.gif" type="image/gif" 
+            style="width: 70%; max-width: 300px; height: auto; border-radius: 15px; overflow: hidden;">
+        </object>
+    </div>
 
     <div class="text right" data-aos="fade-left">
-      <h3>RPA Products</h3>
-      <p class="justified">RPA (Robotic Process Automation) products automate repetitive tasks across various business functions, enabling teams to focus on higher-value activities. Our solutions enhance productivity by automating manual processes in data entry, customer service, and even compliance checks. We provide organizations with tools to integrate and monitor workflows, analyze data, and make real-time decisions without manual intervention. Our offerings include:</p>
-      <ul>
-        <li>Workflow Automation Tools</li>
-        <li>Data Entry Automation</li>
-        <li>Chatbot Solutions</li>
-        <li>Process Monitoring Systems</li>
-      </ul>
+        <h3>RPA Products</h3>
+        <p class="justified">RPA (Robotic Process Automation) products automate repetitive tasks across various business functions, enabling teams to focus on higher-value activities. Our solutions enhance productivity by automating manual processes in data entry, customer service, and even compliance checks. We provide organizations with tools to integrate and monitor workflows, analyze data, and make real-time decisions without manual intervention. Our offerings include:</p>
+        <ul>
+            <li>Workflow Automation Tools</li>
+            <li>Data Entry Automation</li>
+            <li>Chatbot Solutions</li>
+            <li>Process Monitoring Systems</li>
+        </ul>
     </div>
-  </div>
+</div>
 
-  <div class="product-section">
+<div class="product-section">
     <div class="text left" data-aos="fade-right">
-      <h3>E-News Products</h3>
-      <p class="justified">E-News products provide users with timely and accurate information, designed for industries such as media, finance, and education. These solutions help companies aggregate news from multiple sources and deliver real-time updates to their audience. Whether you're a media company, content creator, or news platform, our products help you stay competitive with live feeds, news alerts, and analytics tools that track audience behavior. Our offerings include:</p>
-      <ul>
-        <li>News Aggregation Platforms</li>
-        <li>Newsletter Management Systems</li>
-        <li>Live News Update Tools</li>
-        <li>Breaking News Alerts</li>
-      </ul>
+        <h3>E-News Products</h3>
+        <p class="justified">E-News products provide users with timely and accurate information, designed for industries such as media, finance, and education. These solutions help companies aggregate news from multiple sources and deliver real-time updates to their audience. Whether you're a media company, content creator, or news platform, our products help you stay competitive with live feeds, news alerts, and analytics tools that track audience behavior. Our offerings include:</p>
+        <ul>
+            <li>News Aggregation Platforms</li>
+            <li>Newsletter Management Systems</li>
+            <li>Live News Update Tools</li>
+            <li>Breaking News Alerts</li>
+        </ul>
     </div>
     <div class="image left" data-aos="fade-right">
-  <object data="assets/img/E news.gif" type="image/gif" style="width: 70%; max-width: 300px; height: auto;"></object>
+        <object data="assets/img/E news.gif" type="image/gif" 
+            style="width: 70%; max-width: 300px; height: auto; border-radius: 15px; overflow: hidden;">
+        </object>
+    </div>
 </div>
-  </div>
+
 
   <div class="product-section">
     <div class="image left" data-aos="fade-right">
