--- a/contact.html
+++ b/contact.html
@@ -259,9 +259,9 @@ window.addEventListener("resize", debounce(adjustLogoAndNav, 100));
             </div>
 
             <div class="mb-3">
-              <div class="loading">Loading</div>
+              <div class="loading"> Drop your Messge here!</div>
               <div class="error-message"></div>
-              <div class="sent-message">Your message has been sent. Thank you!</div>
+              <div class="sent-message">Thank You ! </div>
             </div>
             <br>
             <div class="text-center"><button type="submit">Send Message</button></div>
@@ -288,14 +288,14 @@ window.addEventListener("resize", debounce(adjustLogoAndNav, 100));
 
           <div class="content-box">
             <h3 style="color: #e03a3c; font-weight: bold;">
-              <i class="fas fa-map-marker-alt" style="color: black;"></i> Or Visit Us
+              <i class="fas fa-map-marker-alt" style="color: black;"></i> Visit Us
             </h3>
             <p style="color: black;">If you want to meet us in person, feel free to visit our office at the address below. We look forward to meeting you!</p>
           </div>
         </div>
 
         <!-- Google Map Section (Below Left Content) -->
-        <div class="info-box" style="margin-top: 10px; padding: 15px; border-radius: 10px; box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);width: 97%; height: 50.9%;">
+        <div class="info-box" style="margin-top: 8px; padding: 15px; border-radius: 10px; box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);width: 97%; height: 50.9%;">
   <h6 style="color: #e03a3c; font-weight: bold; font-size: 16px; margin-bottom: 10px;">Track Us on Google Map</h6>
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3782.300374384127!2d73.92564101392739!3d18.560491987385774!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2c11464246d03%3A0x7ef94ccf7fe4a2d0!2sFourise%20Technologies%20India%20Pvt.%20Ltd%20Pune.!5e0!3m2!1sen!2sin!4v1614158141064!5m2!1sen!2sin"
     width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
