--- a/index.html
+++ b/index.html
@@ -676,78 +676,83 @@ window.addEventListener("resize", debounce(adjustLogoAndNav, 100));
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
-      <div class="container" data-aos="fade-up">
+  <div class="container" data-aos="fade-up">
 
-        <div class="section-title">
-          <h2>Contact</h2>
-          <p style="color: black;">Let us provide you more details to Accomplish services and For Internship Registration Please fill correct in the below form.</p>
-        </div>
+    <div class="section-title">
+      <h2>Contact</h2>
+      <p style="color: black;">
+        Let us provide you more details to accomplish services and for internship registration. 
+        Please fill in the form below with correct details.
+      </p>
+    </div>
 
-        <div class="row" data-aos="fade-up" data-aos-delay="100">
+    <div class="row" data-aos="fade-up" data-aos-delay="100">
 
-          <div class="col-lg-6">
-
-            <div class="row">
-              <div class="col-md-12">
-                <div class="info-box">
-                  <i class="bx bx-map"></i>
-                  <h3>Our Address</h3>
-                  <p style="color: black;">office no 1, First Floor, Surabhi Complex, Pune - Ahmednagar Hwy, Sai Nagari, Chandan Nagar, Wadgaon Sheri, Pune, Maharashtra 411014
-</p>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="info-box mt-4">
-                  <i class="bx bx-envelope"></i>
-                  <h3>Email Us</h3>
-                  <p style="color: black;">info@fouriseindia.com<br>fouriseindia@gmail.com</p>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="info-box mt-4">
-                  <i class="bx bx-phone-call"></i>
-                  <h3>Call Us</h3>
-                  <p style="color: black;">+91 9607580580<br>+91 7020759254</p>
-                </div>
-              </div>
+      <div class="col-lg-6">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="info-box">
+              <i class="bx bx-map"></i>
+              <h3>Our Address</h3>
+              <p style="color: black;">
+                Office no 1, First Floor, Surabhi Complex, Pune - Ahmednagar Hwy, Sai Nagari, 
+                Chandan Nagar, Wadgaon Sheri, Pune, Maharashtra 411014
+              </p>
             </div>
-
           </div>
-
-          <div class="col-lg-6">
-            <form action="forms/contact.html" method="post" role="form" class="php-email-form">
-              <center><h6 align="text-center"> For More details saturate the form</h6></center>
-              <div class="form-row">
-                <div class="col form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                  <div class="validate"></div>
-                </div>
-                <div class="col form-group">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
-                  <div class="validate"></div>
-                </div>
-              </div>
-              <div class="form-group">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                <div class="validate"></div>
-              </div>
-              <div class="form-group">
-                <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
-                <div class="validate"></div>
-              </div>
-              <div class="mb-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div><br>
-              <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
+          <div class="col-md-6">
+            <div class="info-box mt-4">
+              <i class="bx bx-envelope"></i>
+              <h3>Email Us</h3>
+              <p style="color: black;">info@fouriseindia.com<br>fouriseindia@gmail.com</p>
+            </div>
           </div>
-
+          <div class="col-md-6">
+            <div class="info-box mt-4">
+              <i class="bx bx-phone-call"></i>
+              <h3>Call Us</h3>
+              <p style="color: black;">+91 9607580580<br>+91 7020759254</p>
+            </div>
+          </div>
         </div>
-
       </div>
-    </section><!-- End Contact Section -->
+
+      <div class="col-lg-6">
+        <form action="https://api.web3forms.com/submit" method="post" role="form" class="php-email-form">
+          <input type="hidden" name="access_key" value="f0d86f33-bf11-4659-87cf-2178b164533c">
+          <center><h6 align="text-center">For More details, please fill out the form</h6></center>
+          <div class="form-row">
+            <div class="col form-group">
+              <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 characters" />
+              <div class="validate"></div>
+            </div>
+            <div class="col form-group">
+              <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+              <div class="validate"></div>
+            </div>
+          </div>
+          <div class="form-group">
+            <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 characters of subject" />
+            <div class="validate"></div>
+          </div>
+          <div class="form-group">
+            <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+            <div class="validate"></div>
+          </div>
+          <div class="mb-3">
+            <div class="loading">Loading</div>
+            <div class="error-message"></div>
+            <div class="sent-message">Your message has been sent. Thank you!</div>
+          </div><br>
+          <div class="text-center"><button type="submit">Send Message</button></div>
+        </form>
+      </div>
+
+    </div>
+
+  </div>
+</section>
+
 
   </main><!-- End #main -->
 
@@ -798,7 +803,7 @@ window.addEventListener("resize", debounce(adjustLogoAndNav, 100));
   <p>Get in touch with us and we will keep connection with you. Just subscribe your email</p>
   <form action="https://api.web3forms.com/submit" method="post" role="form" class="php-email-form">
     <!-- Web3Forms Access Key -->
-    <input type="hidden" name="access_key" value="ece71aa4-a60d-4ff5-8a58-c352006ff40a">
+    <input type="hidden" name="access_key" value="f0d86f33-bf11-4659-87cf-2178b164533c">
     
     <!-- Email Input -->
     <input type="email" name="email" required placeholder="Enter your email">
